# minecraft-clone

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
include/: logo.hpp
res/shaders/: fs_simple.sc  varying.def.sc  vs_simple.sc
res/shaders/crosshair/: fs_crosshair.sc  varying.def.sc  vs_crosshair.sc
res/shaders/instancing/: fs_instancing.sc  varying.def.sc  vs_instancing.sc
res/shaders/water/: fs_simple.sc
src/: main.cpp
src/app/: app.cpp  app.hpp
src/controllers/camera/: flying_camera_controller.cpp  flying_camera_controller.hpp
src/ext/: PerlinNoise.hpp  stb_image.cpp
src/input/: keyboard.hpp  mouse.hpp
src/input/keyboard/: keyboard.hpp
src/input/mouse/: mouse.hpp
src/logging/: logging.cpp  logging.hpp
src/logging/error_handling/: error_handling.cpp  error_handling.hpp
src/logging/logger/: logger.cpp  logger.hpp
src/math/: aabb.cpp  aabb.hpp  misc.hpp  ray.cpp  ray.hpp
src/player/: player.cpp  player.hpp
src/render/: camera.hpp
src/render/camera/: camera.cpp  camera.hpp
src/render/chunk/: blocks.hpp  chunk.cpp  chunk.hpp  chunk_manager.cpp  chunk_manager.hpp  chunk_renderer.cpp  chunk_renderer.hpp
src/render/renderer/: cube_renderer.cpp  cube_renderer.hpp  master_renderer.cpp  master_renderer.hpp  renderer.cpp  renderer.hpp
src/render/ui/: crosshair_renderer.cpp  crosshair_renderer.hpp  ui_renderdata.cpp  ui_renderdata.hpp  ui_renderer.cpp  ui_renderer.hpp
src/render/util/: direction.hpp  texture.hpp
src/shader_loading/: shader_loading.cpp  shader_loading.hpp
src/time/: time.hpp
src/util/: util.cpp  util.hpp
src/window/: window.cpp  window.hpp
src/world_manager/: world_manager.cpp  world_manager.hpp
